<resources>
    <string name="app_name">Music Player</string>
    <string name="confirm">Confirm</string>
    <string name="select_music_folder">Your playlist is empty.\n Click here to select a music folder.</string>
    <string name="button_to_pause_music">Button to pause music</string>
    <string name="button_to_play_music">Button to play music</string>
    <string name="list">List</string>
    <string name="rewind_left">Rewind left</string>
    <string name="play_button">Play button</string>
    <string name="pause_button">Pause button</string>
    <string name="rewind_right">Rewind right</string>
    <string name="music">Music</string>
    <string name="folder">Folder</string>
</resources>