<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/music"
            android:contentDescription="@string/music" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/audio_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="Name" />

        </HorizontalScrollView>

        <SeekBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:thumbTint="@color/black"
            android:thumb="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/rewind_left_button"
                android:layout_width="24dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/rewind"
                android:contentDescription="@string/rewind_left" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="24dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/play_icon"
                android:contentDescription="@string/play_button" />

            <ImageButton
                android:id="@+id/pause_button"
                android:layout_width="24dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/pause_icon"
                android:contentDescription="@string/pause_button" />

            <ImageButton
                android:id="@+id/rewind_right_button"
                android:layout_width="24dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/rewind"
                android:rotation="180"
                android:contentDescription="@string/rewind_right" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>